--- a/Project.Entity/Project.Entity.csproj
+++ b/Project.Entity/Project.Entity.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Project.Entity</RootNamespace>
     <AssemblyName>Project.Entity</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,7 +50,9 @@
     <Compile Include="CalDataModel\EventDAO.cs" />
     <Compile Include="CalDataModel\ImproperCalendarEvent.cs" />
     <Compile Include="Calender.cs" />
+    <Compile Include="Campaigns.cs" />
     <Compile Include="Docs.cs" />
+    <Compile Include="Events.cs" />
     <Compile Include="Groups.cs" />
     <Compile Include="Leads.cs" />
     <Compile Include="LeadSource.cs" />
