--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BAL</RootNamespace>
     <AssemblyName>BAL</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>bfe114d0</NuGetPackageImportStamp>
@@ -34,6 +34,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SendGrid, Version=9.8.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sendgrid.9.9.0\lib\net452\SendGrid.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -52,11 +60,13 @@
     <Compile Include="Campaigns\CampaignsManager.cs" />
     <Compile Include="Common\LogManager.cs" />
     <Compile Include="Common\UtilityManager.cs" />
+    <Compile Include="Dashboard\DashboardManager.cs" />
     <Compile Include="Document\DocumentManager.cs" />
     <Compile Include="GenralSeting\GenralSetingManager.cs" />
     <Compile Include="Group\GroupManager.cs" />
     <Compile Include="Helper\AppConfigValue.cs" />
     <Compile Include="Helper\Helper.cs" />
+    <Compile Include="LeadEvents\LeadEventsManager.cs" />
     <Compile Include="LeadStatuses\LeadStatusmanager.cs" />
     <Compile Include="Leads\LeadsManager.cs" />
     <Compile Include="Mail\MailManager.cs" />
@@ -88,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
