--- a/Project.Web/Project.Web.csproj
+++ b/Project.Web/Project.Web.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Project.Web</RootNamespace>
     <AssemblyName>Project.Web</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -21,6 +21,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <TargetFrameworkProfile />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +51,10 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SendGrid, Version=9.8.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sendgrid.9.9.0\lib\net452\SendGrid.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System">
@@ -207,6 +212,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="CalenderHelper\CalenderEvents.cs" />
     <Compile Include="Common\SessionHelper.cs" />
     <Compile Include="Common\UserSession.cs" />
     <Compile Include="Controllers\AdminSeting\AdminSetingController.cs" />
@@ -217,9 +223,11 @@
     <Compile Include="Controllers\EmailTemplate\DripEmailHelper.cs" />
     <Compile Include="Controllers\EmailTemplate\EmailTemplateController.cs" />
     <Compile Include="Controllers\Home\HomeController.cs" />
+    <Compile Include="Controllers\LeadEvents\LeadEventsController.cs" />
     <Compile Include="Controllers\LeadSubmission\LeadSubmissionController.cs" />
     <Compile Include="Controllers\Leads\LeadsController.cs" />
     <Compile Include="Controllers\Mails\MailsController.cs" />
+    <Compile Include="Controllers\MarketingCampaign\CampaignHelper.cs" />
     <Compile Include="Controllers\MarketingCampaign\MarketingCampaignController.cs" />
     <Compile Include="Controllers\Notes\NotesController.cs" />
     <Compile Include="Controllers\Reports\ReportsController.cs" />
@@ -234,6 +242,7 @@
     <Compile Include="Models\AdminSetingModel.cs" />
     <Compile Include="Models\ApplicationModel.cs" />
     <Compile Include="Models\CalenderModel.cs" />
+    <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\DocModel.cs" />
     <Compile Include="Models\DripEmailModel.cs" />
     <Compile Include="Models\GroupsModel.cs" />
@@ -248,27 +257,9 @@
     <Compile Include="Models\TemplateModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SendGridEmailService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CalenderHelper\css\cupertino\images\animated-overlay.gif" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_diagonals-thick_90_eeeeee_40x40.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_flat_15_cd0a0a_40x100.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_glass_100_e4f1fb_1x400.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_glass_50_3baae3_1x400.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_glass_80_d7ebf9_1x400.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_highlight-hard_100_f2f5f7_1x100.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_highlight-hard_70_000000_1x100.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_highlight-soft_100_deedf7_1x100.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-bg_highlight-soft_25_ffef8f_1x100.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-icons_2694e8_256x240.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-icons_3d80b3_256x240.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-icons_72a7cf_256x240.png" />
-    <Content Include="CalenderHelper\css\cupertino\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="CalenderHelper\css\cupertino\jquery-ui-1.10.3.min.css" />
-    <Content Include="CalenderHelper\css\cupertino\jquery-ui-1.11.0.css" />
-    <Content Include="CalenderHelper\css\cupertino\jquery-ui-1.11.0.min.css" />
-    <Content Include="CalenderHelper\css\jquery.qtip-2.2.0.css" />
     <Content Include="CalenderHelper\fullcalendar\fullcalendar-1.6.4.js" />
     <Content Include="CalenderHelper\fullcalendar\fullcalendar-2.0.2.js" />
     <Content Include="CalenderHelper\fullcalendar\fullcalendar-2.0.3.js" />
@@ -11647,7 +11638,6 @@
     <Content Include="Content\TemplateCSS\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\TemplateCSS\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\TemplateCSS\fonts\glyphicons-halflings-regulard41d.eot" />
-    <Content Include="CalenderHelper\JsonResponse.ashx" />
     <Content Include="CalenderHelper\jquery\jquery-2.1.1.min.map" />
     <Content Include="Content\build\js\amchart.zip" />
     <None Include="Properties\PublishProfiles\ics_02_2017_Feb.pubxml" />
@@ -11658,14 +11648,21 @@
     <None Include="Properties\PublishProfiles\ics_04_feb.pubxml" />
     <None Include="Properties\PublishProfiles\ics_05_sept.pubxml" />
     <None Include="Properties\PublishProfiles\ics_07_Dec.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_07_oct.pubxml" />
     <None Include="Properties\PublishProfiles\ics_08.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_09_oct.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_10_oc.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_10_oct.pubxml" />
     <None Include="Properties\PublishProfiles\ics_12.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_12_oct.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_13_oct.pubxml" />
     <None Include="Properties\PublishProfiles\ics_16_sept.pubxml" />
     <None Include="Properties\PublishProfiles\ics_18_jan.pubxml" />
     <None Include="Properties\PublishProfiles\ics_18_sept.pubxml" />
     <None Include="Properties\PublishProfiles\ics_19_dec.pubxml" />
     <None Include="Properties\PublishProfiles\ics_21_sept.pubxml" />
     <None Include="Properties\PublishProfiles\ics_22_aug.pubxml" />
+    <None Include="Properties\PublishProfiles\ics_24_oct.pubxml" />
     <None Include="Properties\PublishProfiles\ics_27_jan.pubxml" />
     <None Include="Properties\PublishProfiles\ics_31_Jan.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
@@ -11771,14 +11768,20 @@
     <Content Include="Views\Home\testDashboard.cshtml" />
     <Content Include="Views\MarketingCampaign\AddEmailCampaign.cshtml" />
     <Content Include="Views\MarketingCampaign\EmailMarketingHome.cshtml" />
+    <Content Include="Views\Calender\testCalender.cshtml" />
+    <Content Include="Views\MarketingCampaign\TempCampaign.cshtml" />
+    <Content Include="Views\AdminSeting\AjaxGenralSetings.cshtml" />
+    <Content Include="Uploads\Import\Lead\Sample\Lead_Sample.xlsx" />
+    <Content Include="Views\Doc\Index.cshtml" />
+    <Content Include="Views\TempCalender\Index.cshtml" />
+    <Content Include="Views\LeadEvents\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\plugins\codemirror\mode\rpm\changes\" />
     <Folder Include="Content\plugins\pdfmake\libs\FileSaver.js\" />
     <Folder Include="Uploads\Docs\" />
-    <Folder Include="Uploads\Import\Lead\Sample\" />
-    <Folder Include="Views\Doc\" />
+    <Folder Include="Views\Tickets\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
