--- a/Project.Web/packages.config
+++ b/Project.Web/packages.config
@@ -33,6 +33,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
