--- a/Project.Entity/Project.Entity.csproj
+++ b/Project.Entity/Project.Entity.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Notes.cs" />
     <Compile Include="objResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatesAndFee.cs" />
     <Compile Include="Tasks.cs" />
     <Compile Include="Templates.cs" />
     <Compile Include="UserRoles.cs" />
