--- a/Project.Web/Web.config
+++ b/Project.Web/Web.config
@@ -51,10 +51,11 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
+    <sessionState mode="InProc" timeout="1800"></sessionState>
     <authentication mode="Forms">
-      <forms loginUrl="~/Authentication/Login" timeout="288000" />
+      <forms loginUrl="~/Authentication/Login" timeout="1800" />
     </authentication>
-    <sessionState mode="InProc" timeout="120" />
+   
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers" />
